// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option> rendering with children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="radioWrapper"
      >
        <test-file-stub />
      </div>
      <TextBody
        isInline={true}
      >
        Some label
      </TextBody>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="radio"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Option> rendering without children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="radioWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="radio"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;
